receiptCtrl functionality allows assigning people

--- a/app/people/splitters.html
+++ b/app/people/splitters.html
@@ -1,4 +1,4 @@
-<h1>Insert Splitters</h1>
+<h1>Add Friends</h1>
 <form>
   <input placeholder="name" ng-model="name"></input>
   <button ng-click="addUser(name)">Submit</button>
