--- a/app/receipt/receipt.html
+++ b/app/receipt/receipt.html
@@ -2,7 +2,7 @@
 <form>
   <input id="tip" placeholder="tip % (e.g. 15, 18, 20)" ng-model="bill.tip"></input>
   <input id="tax" placeholder="tax (e.g. 6.50)" ng-model="bill.tax"></input>
-  <button ng-click="calculateTipTax()">Submit</button>
+  <button ng-click="calculateTipTax(bill)">Submit</button>
 </form>
 <form>
   <input id="quantity" placeholder="qty" ng-model="item.quantity"> x</input>
@@ -20,6 +20,8 @@
 </div>
 
 <div class="selectSplitters" ng-if="toggle % 2 === 0">
-  <div ng-repeat="person in splitters" ng-click="addPerson()">{{ person.name }}</div>
+  <div ng-repeat="person in splitters" ng-click="addPerson()" ng-class="person.selected">{{ person.name }}</div>
   <button ng-click="assignPerson()">Split</button>
 </div>
+
+<button ng-click="viewTotals()">View Totals</button>
