All controllers working

--- a/app/person/person.html
+++ b/app/person/person.html
@@ -6,7 +6,7 @@
   </tr>
   <tr>
     <td>Subtotal</td>
-    <td>{{ subtotal }}</td>
+    <td>{{ person.subtotal }}</td>
   </tr>
   <tr>
     <td>Tax</td>
@@ -18,6 +18,6 @@
   </tr>
   <tr>
     <td>Total</td>
-    <td>{{ total }}</td>
+    <td>{{ person.total }}</td>
   </tr>
 </table>
