--- a/app/people/splitters.html
+++ b/app/people/splitters.html
@@ -1,14 +1,15 @@
-<h1>Add Friends</h1>
-<form>
-  <input placeholder="name" ng-model="name"></input>
-  <button ng-click="addUser(name)">Submit</button>
-</form>
+<div class="main">
+  <h1>split with...</h1>
+  <form class="addPerson">
+    <input placeholder="name" ng-model="name"></input>
+    <button ng-click="addUser(name)">Submit</button>
+  </form>
 
-<div class="container">
-
-  <div ng-repeat="person in users.splitters | orderBy: 'name'">
-    {{ person.name }}
+  <div class="container">
+    <div ng-repeat="person in users.splitters | orderBy: 'name'">
+      {{ person.name }}
+    </div>
   </div>
-</div>
 
-<button id="addedUsers" ng-click="shareData()">Done</a>
+  <button id="addedUsers" ng-click="shareData()">Add Receipt</a>
+</main>
