--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
+
   <script src="app/app.js"></script>
   <script src="app/people/splittersCtrl.js"></script>
   <script src="app/receipt/receiptCtrl.js"></script>
@@ -16,6 +16,7 @@
   <script src="app/total/totalCtrl.js"></script>
 </head>
 <body ng-app='billSplitter'>
+  <header>Split With</header>
   <ng-view></ng-view>
 </body>
 </html>
