--- a/app/person/person.html
+++ b/app/person/person.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <h1>Total for: {{ name }}</h1>
+  <p class='header'>Total for: {{ name }}</p>
   <table>
     <tr ng-repeat="item in person.purchased">
       <td>{{ item.dish }}</td>
