--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <title>Bill Splitter</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Split With</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <script src="js/ocrad.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.19/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.19/angular-route.min.js"></script>
@@ -16,7 +16,7 @@
   <script src="app/total/totalCtrl.js"></script>
 </head>
 <body ng-app='billSplitter'>
-  <header>Split With</header>
+  <header><a href="#/">Split With</a></header>
   <ng-view></ng-view>
 </body>
 </html>
