--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="app/app.js"></script>
   <script src="app/people/splittersCtrl.js"></script>
   <script src="app/receipt/receiptCtrl.js"></script>
+  <script src="app/bill/billCtrl.js"></script>
   <script src="app/person/personCtrl.js"></script>
   <script src="app/total/totalCtrl.js"></script>
 </head>
