--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.19/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="./bootstrap-3.3.5-dist/css/bootstrap.min.css"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <script src="app/app.js"></script>
