(feat) Styling changes - more mobile ui

--- a/client/app/bill/bill.html
+++ b/client/app/bill/bill.html
@@ -21,6 +21,6 @@
     <p>Tip: {{ tipPercent }}%</p>
   </div>
 
-  <button id="viewTotals" ng-click="viewTotals()">View Totals</button>
+  <button class="bottomBtn" id="viewTotals" ng-click="viewTotals()">View Totals</button>
 
 </div>
