--- a/client/app/people/splitters.html
+++ b/client/app/people/splitters.html
@@ -4,7 +4,7 @@
     <input placeholder="name" ng-model="name"></input>
     <div class="buttonWrapper">
       <button id="addFriend" ng-click="addUser(name)">Add Friend</button>
-      <button id="addedUsers" ng-click="shareData()">Add Bill</button>
+      <button class="bottomBtn" id="addedUsers" ng-click="shareData()">Add Bill</button>
     </div>
   </form>
 
