--- a/client/app/person/person.html
+++ b/client/app/person/person.html
@@ -23,6 +23,6 @@
     </tr>
   </table>
 
-<button id="backToTotals" ng-click="allTotals()"><<<</button>
+<button class="bottomBtn" ng-click="allTotals()">Back</button>
 </div>
 
