--- a/client/app/receipt/splitItems.html
+++ b/client/app/receipt/splitItems.html
@@ -25,6 +25,6 @@
   </div>
 
 
-  <button id="finishBill" ng-click="finishBill()">Tip + Tax</button>
+  <button class="bottomBtn" id="finishBill" ng-click="finishBill()">Tip + Tax</button>
   
 </div>
