--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.19/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="./bootstrap-3.3.5-dist/css/bootstrap.min.css"></script>
+  <link rel="stylesheet" href="./bootstrap-3.3.5-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/people/splittersCtrl.js"></script>
   <script src="app/receipt/receiptCtrl.js"></script>
